Code documentation and unit tests
